fix:method is undefined for type error